--- a/FowlerSite/Views/Games/Index.cshtml
+++ b/FowlerSite/Views/Games/Index.cshtml
@@ -13,7 +13,7 @@
         <h1>Filters</h1>
 
         <!--
-        START: Sidebar
+        START: Filter Sidebar
 
         Additional Classes:
             .nk-sidebar-left
@@ -21,58 +21,55 @@
             .nk-sidebar-sticky
         -->
             <aside class="nk-sidebar nk-sidebar-left">
-                <div class="nk-widget">
-                    <h4 class="nk-widget-title"><span><span class="text-main-1">Title</span></span></h4>
-                    <div class="nk-widget-content">
-                        <form action="#" class="nk-form nk-form-style-1" novalidate="novalidate">
-                            <div class="input-group">
-                                <input type="text" class="form-control" placeholder="Type something...">
-                                <button class="nk-btn nk-btn-color-main-1"><span class="ion-search"></span></button>
+                <div class="nk-widget nk-widget-highlighted">
+                    <form method="post" class="nk-form nk-form-style-1" novalidate="novalidate">
+
+                        <!--Title filter-->
+                        <h4 class="nk-widget-title"><span><span class="text-main-1">Title</span></span></h4>
+                        <div class="nk-widget-content">
+                            <div id="title" class="input-group">
+                                <input name="name" type="text" class="form-control" placeholder="Type something...">
                             </div>
-                        </form>
-                    </div>
-                </div>
-                <div class="nk-widget nk-widget-highlighted">
-                    <h4 class="nk-widget-title"><span><span class="text-main-1">Genres</span></span></h4>
-                    <div class="nk-widget-content">
-                        <ul class="nk-widget-categories">
-                            <li><a href="#">RTS</a></li>
-                            <li><a href="#">Action</a></li>
-                            <li><a href="#">RPG</a></li>
-                            <li><a href="#">MMO</a></li>
-                            <li><a href="#">MOBA</a></li>
-                            <li><a href="#">Adventure</a></li>
-                            <li><a href="#">Indie</a></li>
-                            <li><a href="#">Strategy</a></li>
-                            <li><a href="#">Racing</a></li>
-                            <li><a href="#">Simulator</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="nk-widget nk-widget-highlighted">
-                    <h4 class="nk-widget-title"><span><span class="text-main-1">Price</span></span></h4>
-                    <div class="nk-widget-content">
-                        <div class="nk-input-slider">
-                            <input type="text"
-                                   name="price-filter"
-                                   data-slider-min="0"
-                                   data-slider-max="1800"
-                                   data-slider-step="1"
-                                   data-slider-value="[200, 1200]"
-                                   data-slider-tooltip="hide">
-                            <div class="nk-gap"></div>
-                            <div>
-                                <div class="text-white mt-4 float-left">
-                                    PRICE:
-                                    <strong class="text-main-1">$ <span class="nk-input-slider-value-0"></span></strong>
-                                    -
-                                    <strong class="text-main-1">$ <span class="nk-input-slider-value-1"></span></strong>
-                                </div>
-                                <a href="#" class="nk-btn nk-btn-rounded nk-btn-color-white float-right">Apply</a>
+                        </div>
+
+                        <!--Genre filter-->
+                        <h4 class="nk-widget-title"><span><span class="text-main-1">Genres</span></span></h4>
+                        <div class="nk-widget-content">
+                            <div id="genre" class="input-group">
+                                <select name="genre" id="genres" class="form-control">
+                                    <option value="" disabled selected>Select your option</option>
+                                    <option value="rts">RTS</option>
+                                    <option value="action">Action</option>
+                                    <option value="rpg">RPG</option>
+                                    <option value="mmo">MMO</option>
+                                    <option value="moba">MOBA</option>
+                                    <option value="adventure">Adventure</option>
+                                    <option value="indie">Indie</option>
+                                    <option value="strategy">Strategy</option>
+                                    <option value="racing">Racing</option>
+                                    <option value="simulator">Simulator</option>
+                                </select>
+                            </div>
+                        </div>
+
+                        <!--Price filter-->
+                        <h4 class="nk-widget-title"><span><span class="text-main-1">Price</span></span></h4>
+                        <div id="price" class="nk-widget-content">
+                            <div id="lowPrice" class="input-group">
+                                Between <input name="lowPrice" type="number" step="any" class="form-control" placeholder="Lowest price...">
+                            </div>
+                            <div id="highPrice" class="input-group">
+                                and <input name="highPrice" type="number" step="any" class="form-control" placeholder="Highest price...">
                             </div>
                             <div class="clearfix"></div>
                         </div>
-                    </div>
+
+                        <div id="apply" class="nk-widget-content">
+                            <input asp-action="Filter" type="submit" value="Apply" class="nk-btn nk-btn-rounded nk-btn-color-white float-right" />
+                            <div class="clearfix"></div>
+                        </div>
+
+                    </form>
                 </div>
             </aside>
         </div>
